--- a/non-graded ex 3.ipynb
+++ b/non-graded ex 3.ipynb
@@ -24,18 +24,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * P * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "Invalid move. Please enter N, S, E, or W.\n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * P * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "Moves made: 1/10. Your current position is (1, 3).\n",
+      "You are getting closer to the treasure.\n",
+      "* * * * * \n",
+      "* * * P * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "Moves made: 2/10. Your current position is (0, 3).\n",
+      "The distance from the treasure has not changed.\n",
+      "* * * P * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "You cannot move outside the grid. Please try again.\n",
+      "* * * P * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "Moves made: 3/10. Your current position is (0, 2).\n",
+      "You are getting closer to the treasure.\n",
+      "* * P * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "Moves made: 4/10. Your current position is (0, 1).\n",
+      "You are getting closer to the treasure.\n",
+      "* P * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "Congratulations! You found the treasure!\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
-    "\n",
+    "grid_size = 5\n",
     "\n",
     "player_position = [random.randint(0, grid_size - 1), random.randint(0, grid_size - 1)]\n",
     "print(player_position)\n",
-    "treasure_position = #Same logic as above\n",
-    "\n"
+    "treasure_position = [random.randint(0, grid_size - 1), random.randint(0, grid_size - 1)]\n",
+    "\n",
+    "def print_grid():\n",
+    "    for i in range(grid_size):\n",
+    "        for j in range(grid_size):\n",
+    "            if i == player_position[0] and j == player_position[1]:\n",
+    "                if player_position == treasure_position:\n",
+    "                    print(\"T\", end=' ')\n",
+    "                else:\n",
+    "                    print(\"P\", end=' ')\n",
+    "            else:\n",
+    "                print(\"*\",end=' ')\n",
+    "        print()\n",
+    "\n",
+    "max_moves = 10\n",
+    "moves = 0\n",
+    "\n",
+    "initial_distance = abs(player_position[0] - treasure_position[0]) + abs(player_position[1] - treasure_position[1])\n",
+    "\n",
+    "while moves < max_moves:\n",
+    "    print_grid()\n",
+    "    move = input(\"Enter your move(N, S, E, W): \").upper()\n",
+    "\n",
+    "    if move == 'N':\n",
+    "        new_position = (player_position[0] - 1, player_position[1])\n",
+    "    elif move == 'S':\n",
+    "        new_position = (player_position[0] + 1, player_position[1])\n",
+    "    elif move == 'E':\n",
+    "        new_position = (player_position[0], player_position[1] + 1)\n",
+    "    elif move == 'W':\n",
+    "        new_position = (player_position[0], player_position[1] - 1)\n",
+    "    else:\n",
+    "        print(\"Invalid move. Please enter N, S, E, or W.\")\n",
+    "        continue\n",
+    "\n",
+    "    if new_position[0] < 0 or new_position[0] >= grid_size or new_position[1] < 0 or new_position[1] >= grid_size:\n",
+    "        print(\"You cannot move outside the grid. Please try again.\")\n",
+    "        continue\n",
+    "        \n",
+    "    player_position = new_position\n",
+    "    moves += 1\n",
+    "    current_distance = abs(player_position[0] - treasure_position[0]) + abs(player_position[1] - treasure_position[1])\n",
+    "    \n",
+    "    if current_distance == 0:\n",
+    "        print(\"Congratulations! You found the treasure!\")\n",
+    "        break\n",
+    "    elif moves == max_moves:\n",
+    "        print(\"Game over! You ran out of moves. The treasure was at\", treasure_position)\n",
+    "        break\n",
+    "    else:\n",
+    "        print(f\"Moves made: {moves}/{max_moves}. Your current position is {player_position}.\")\n",
+    "\n",
+    "    if current_distance < initial_distance:\n",
+    "        print(\"You are getting closer to the treasure.\")\n",
+    "\n",
+    "    elif current_distance == initial_distance:\n",
+    "        print(\"The distance from the treasure has not changed.\")\n",
+    "\n",
+    "    elif current_distance > initial_distance:\n",
+    "        print(\"You are moving farther from the treasure.\")\n"
    ]
   }
  ],
@@ -55,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
